// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CpsAssetPageMain should correctly handle live streams 1`] = `
<DocumentFragment>
  <noscript />
  .c11 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

.c17 {
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  font-family: inherit;
  font-weight: inherit;
}

.c1 {
  position: relative;
}

.c12 {
  position: relative;
}

.c5 {
  position: relative;
}

.c6 {
  position: relative;
}

.c10 {
  position: relative;
}

.c14 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  padding-bottom: 0.25rem;
}

.c14:last-child {
  padding-bottom: 1rem;
}

.c16 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c18 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c18:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.c18:focus,
.c18:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

.c19 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  list-style-type: none;
}

.c19 > li::before {
  content: ' ';
  display: inline-block;
  width: 2rem;
  background: url("data:image/svg+xml,%3Csvg height='10' width='10' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='5' cy='5' r='3'%3E%3C/circle%3E%3C/svg%3E") no-repeat center;
  margin-left: -2rem;
}

.c20 {
  display: inline-block;
}

.c7 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.c4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c23 {
  font-size: 0.75rem;
  line-height: 1rem;
  background-color: rgba(34,34,34,0.75);
  text-transform: uppercase;
  color: #FFFFFF;
  padding: 0.25rem 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  position: absolute;
  bottom: 0;
  margin: 0;
  left: 0;
}

.c22 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #ECEAE7;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

.c8 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c9 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
  overflow: hidden;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c11 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c11 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c11 {
    padding: 2.5rem 0;
  }
}

@media (max-width:14.9375rem) {
  .c1 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c1 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c1 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c1 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 -0.5rem;
  }
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    margin: 0 0.5rem;
    width: calc(83.33333333333333% - 1rem);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    margin: 0 0.5rem;
    width: calc(62.5% - 1rem);
    margin-left: 12.5%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    margin: 0 0.5rem;
    width: calc(50% - 1rem);
    margin-left: 20%;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c12 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c12 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c12 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c12 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c12 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:80rem) {
  .c12 {
    margin: 0 -0.5rem;
  }
}

@supports (display:grid) {
  .c12 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c21 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c21 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c21 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c21 {
    margin: 0 0.5rem;
    width: calc(100% - 1rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c21 {
    margin: 0 0.5rem;
    width: calc(75% - 1rem);
    margin-left: 12.5%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c21 {
    margin: 0 0.5rem;
    width: calc(60% - 1rem);
    margin-left: 20%;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c21 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c13 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c13 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c13 {
    margin: 0 0.25rem;
    width: calc(66.66666666666667% - 0.5rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c13 {
    margin: 0 0.5rem;
    width: calc(83.33333333333333% - 1rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c13 {
    margin: 0 0.5rem;
    width: calc(50% - 1rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c13 {
    margin: 0 0.5rem;
    width: calc(40% - 1rem);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c13 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c15 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c15 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c15 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c15 {
    margin: 0 0.5rem;
    width: calc(83.33333333333333% - 1rem);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c15 {
    margin: 0 0.5rem;
    width: calc(62.5% - 1rem);
    margin-left: 12.5%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c15 {
    margin: 0 0.5rem;
    width: calc(50% - 1rem);
    margin-left: 20%;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c15 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c5 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c5 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c5 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c5 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c5 {
    margin-left: 12.5%;
  }
}

@media (min-width:80rem) {
  .c5 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .c5 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c6 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c6 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c6 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c6 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c6 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .c6 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .c6 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c10 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c10 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c10 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c10 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c10 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .c10 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .c10 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@supports (display:grid) {
  .c0 {
    padding: 0;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c2 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c14 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c14 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c16 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c16 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c19 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c19 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

<div
    class="c0"
  >
    <main
      class="c1 c2"
      dir="ltr"
      role="main"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <a
          data-e2e="cpsAssetDummyLink"
          href="/pidgin/23248703"
        >
          Test MAP to MAP inline link
        </a>
        <h1
          class="c4"
          id="content"
          tabindex="-1"
        >
          Ўзбек деҳқонининг косаси нега оқармайдиshort
        </h1>
        <div
          class="c5"
          dir="ltr"
        >
          <div
            class="c6"
            dir="ltr"
          >
            <figure
              class="c7"
            >
              <div
                class="c8"
              >
                <iframe
                  allow="autoplay; fullscreen"
                  allowfullscreen=""
                  class="c9"
                  src="https://www.test.bbc.co.uk/ws/av-embeds/cps/uzbek/sport-23248721/bbc_world_service_west_africa/ig"
                  title="Media player"
                />
              </div>
            </figure>
          </div>
        </div>
        <div
          class="c10"
          dir="ltr"
        >
          <strong
            aria-hidden="true"
            class="c11"
          >
            Ўзбек деҳқонининг косаси нега оқармайдиshort
          </strong>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c13"
            dir="ltr"
          >
            <time
              class="c14"
              datetime="2019-09-13"
            >
              13 Septemba 2019
            </time>
            <time
              class="c14"
              datetime="2019-11-06"
            >
              Mgbe ikpeazụ e tinyere ya ozi ọhụrụ 6 Nọvemba 2019
            </time>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              <b>
                Ўзбек деҳқонининг косаси нега оқармайди
              </b>
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              <b>
                Ўзбек деҳқонининг косаси нега оқармайди
              </b>
              <b>
                 heading
              </b>
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              <i
                class="c17"
              >
                <b>
                  Ўзбек деҳқонининг косаси нега оқармайди
                </b>
              </i>
              <i
                class="c17"
              >
                <b>
                   heading
                </b>
              </i>
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              <b>
                Ўзбек деҳқонининг косаси нега оқармайди
              </b>
              <b>
                 crosshead 
              </b>
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              Шу йил апрел ойида Ўзбекистон Президенти Ислом 
              <a
                class="c18"
                href="https://bbc.com/uzbek"
              >
                Каримов ўзининг
              </a>
               Москвага сафари мобайнида Россияга Туркия каби мамлакатлардан келмай қолган қишлоқ хўжалик маҳсулотлари ўрнини Ўзбекистон қоплаб беришга тайёр эканлигини айтганди.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              Шу вақтгача ҳам ўзбекистонлик деҳқонлар ўз маҳсулотларини хорижга олиб 
              <b>
                чиқишда турли муаммоларга юз тутиб
              </b>
               келишган, апрель ойида президент қарори билан "Ўзагроэкспорт" мева-сабзавот маҳсулотларини экспорт қилиш билан шуғулланадиган ташқи савдо компанияси ҳам ташкил қилинди.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              Ўз мева-сабзавотини Россияга олиб чиқишда бу компания ёрдамига умид қилган боғбонларнинг гилослари бузила бошлагани ҳақидаги хабарлар ҳам тарқалди..
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              Ҳозирда Ўзбекистонда айни пишиқчилик ва етиштирилган маҳсулот учун кенгроқ бозор топиш масаласи яна долзарб турар экан, мамлакат раҳбарининг сўзларидан сўнг вазият нақадар ўзгарган?
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              Би-би-си билан суҳбатда иқтисодий таҳлилчи Анвар Ҳусаиновнинг айтишича, юқори минбардан айтилган сўзларга қарамай, қишлоқ хўжалиги маҳсулотларини хорижга, жумладан Россия бозорига олиб чиқишда ҳануз кўплаб муаммолар мавжуд.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              "Албатта ўтган йилларга қараганда маҳсулотлар экспорти анча кўпайган. Россиядан юк машиналари келиб, тўғридан-тўғри деҳқонлардан нақд пулга 
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <ul
              class="c19"
              dir="ltr"
              role="list"
            >
              <li
                role="listitem"
              >
                <div
                  class="c20"
                >
                  <div
                    class="c12 c2"
                    dir="ltr"
                  >
                    <div
                      class="c15"
                      dir="ltr"
                    >
                      <p
                        class="c16"
                      >
                        Ўзбек деҳқонининг косаси нега оқармайди
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                role="listitem"
              >
                <div
                  class="c20"
                >
                  <div
                    class="c12 c2"
                    dir="ltr"
                  >
                    <div
                      class="c15"
                      dir="ltr"
                    >
                      <p
                        class="c16"
                      >
                        Ўзбек деҳқонининг косаси нега оқармайди
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                role="listitem"
              >
                <div
                  class="c20"
                >
                  <div
                    class="c12 c2"
                    dir="ltr"
                  >
                    <div
                      class="c15"
                      dir="ltr"
                    >
                      <p
                        class="c16"
                      >
                        <b>
                          Ўзбек деҳқонининг косаси нега оқармайди
                        </b>
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                role="listitem"
              >
                <div
                  class="c20"
                >
                  <div
                    class="c12 c2"
                    dir="ltr"
                  >
                    <div
                      class="c15"
                      dir="ltr"
                    >
                      <p
                        class="c16"
                      >
                        Ўзбек деҳқонининг косаси нега оқармайди
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <ul
              class="c19"
              dir="ltr"
              role="list"
            >
              <li
                role="listitem"
              >
                <div
                  class="c20"
                >
                  <div
                    class="c12 c2"
                    dir="ltr"
                  >
                    <div
                      class="c15"
                      dir="ltr"
                    >
                      <p
                        class="c16"
                      >
                        <a
                          class="c18"
                          href="https://bbc.com/uzbek"
                        >
                          Ўзбек деҳқонининг косаси нега оқармайди
                        </a>
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                role="listitem"
              >
                <div
                  class="c20"
                >
                  <div
                    class="c12 c2"
                    dir="ltr"
                  >
                    <div
                      class="c15"
                      dir="ltr"
                    >
                      <p
                        class="c16"
                      >
                        <a
                          class="c18"
                          href="https://bbc.com/uzbek"
                        >
                          Ўзбек деҳқонининг косаси нега оқармайди
                        </a>
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                role="listitem"
              >
                <div
                  class="c20"
                >
                  <div
                    class="c12 c2"
                    dir="ltr"
                  >
                    <div
                      class="c15"
                      dir="ltr"
                    >
                      <p
                        class="c16"
                      >
                        <a
                          class="c18"
                          href="https://bbc.com/uzbek"
                        >
                          Ўзбек деҳқонининг косаси нега оқармайди
                        </a>
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                role="listitem"
              >
                <div
                  class="c20"
                >
                  <div
                    class="c12 c2"
                    dir="ltr"
                  >
                    <div
                      class="c15"
                      dir="ltr"
                    >
                      <p
                        class="c16"
                      >
                        <a
                          class="c18"
                          href="https://bbc.com/uzbek"
                        >
                          Ўзбек деҳқонининг косаси нега оқармайди
                        </a>
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
        <figure
          class="c7"
        >
          <div
            class="c12 c2"
            dir="ltr"
          >
            <div
              class="c21"
              dir="ltr"
            >
              <div
                class="c22"
              >
                <div
                  class="lazyload-placeholder"
                />
                <noscript />
                <p
                  class="c23"
                  role="text"
                >
                  <span
                    class="c4"
                  >
                    Ebe foto si 
                  </span>
                  <span
                    lang="en-GB"
                  >
                    AFP
                  </span>
                </p>
              </div>
            </div>
          </div>
        </figure>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              Ўзбек деҳқонининг косаси нега оқармайди transmission info 
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              Ўзбек деҳқонининг косаси нега оқармайди footer 
            </p>
          </div>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`CpsAssetPageMain should not show the pop-out timestamp when allowDateStamp is false 1`] = `
<DocumentFragment>
  <noscript />
  .c11 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

.c1 {
  position: relative;
}

.c12 {
  position: relative;
}

.c5 {
  position: relative;
}

.c6 {
  position: relative;
}

.c10 {
  position: relative;
}

.c35 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c14 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c15 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  list-style-type: none;
}

.c15 > li::before {
  content: ' ';
  display: inline-block;
  width: 2rem;
  background: url("data:image/svg+xml,%3Csvg height='10' width='10' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='5' cy='5' r='3'%3E%3C/circle%3E%3C/svg%3E") no-repeat center;
  margin-left: -2rem;
}

.c16 {
  display: inline-block;
}

.c7 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.c4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c29 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #ECEAE7;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

.c8 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c23 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #222222;
  background-color: #FFFFFF;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c19 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

.c18 {
  position: relative;
  margin-top: 2rem;
}

.c20 {
  margin: 0;
  padding: 0;
}

.c25 {
  border-bottom: 0.0625rem solid #F2F2F2;
  padding: 0.5rem 0 1rem;
}

.c25:first-child {
  padding-top: 0;
}

.c25:last-child {
  padding-bottom: 0;
  border: none;
}

.c24 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c26 {
  position: relative;
}

.c27 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

.c28 {
  position: relative;
}

.c32 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c34 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c31 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

.c33 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c33:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c33:hover,
.c33:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c33:visited {
  color: #6E6E73;
}

.c17 {
  z-index: 0;
}

.c9 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
  overflow: hidden;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c11 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c11 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c11 {
    padding: 2.5rem 0;
  }
}

@media (max-width:14.9375rem) {
  .c1 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c1 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c1 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c1 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 -0.5rem;
  }
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    margin: 0 0.5rem;
    width: calc(83.33333333333333% - 1rem);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    margin: 0 0.5rem;
    width: calc(62.5% - 1rem);
    margin-left: 12.5%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    margin: 0 0.5rem;
    width: calc(50% - 1rem);
    margin-left: 20%;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c12 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c12 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c12 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c12 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c12 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:80rem) {
  .c12 {
    margin: 0 -0.5rem;
  }
}

@supports (display:grid) {
  .c12 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c13 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c13 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c13 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c13 {
    margin: 0 0.5rem;
    width: calc(83.33333333333333% - 1rem);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c13 {
    margin: 0 0.5rem;
    width: calc(62.5% - 1rem);
    margin-left: 12.5%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c13 {
    margin: 0 0.5rem;
    width: calc(50% - 1rem);
    margin-left: 20%;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c13 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c5 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c5 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c5 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c5 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c5 {
    margin-left: 12.5%;
  }
}

@media (min-width:80rem) {
  .c5 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .c5 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c6 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c6 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c6 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c6 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c6 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .c6 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .c6 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c10 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c10 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c10 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c10 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c10 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .c10 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .c10 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@supports (display:grid) {
  .c0 {
    padding: 0;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c2 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c35 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c35 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c14 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c14 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c15 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c15 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c22 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c23 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c23 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c23 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .c23 {
    padding-right: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c19 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .c19 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c18 {
    margin-top: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c25 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width:63rem) {
  .c25 {
    padding: 1.5rem 0 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c25:first-child {
    padding-top: 1rem;
  }
}

@media (min-width:63rem) {
  .c25:first-child {
    padding-top: 1.5rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c26 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:80rem) {
  .c27 {
    width: 33.33%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c27 {
    display: block;
    width: initial;
    grid-column: 1 / span 2;
  }
}

@media (min-width:25rem) {
  .c30 {
    position: absolute;
    bottom: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c32 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c32 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c32 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c34 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c34 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .c34 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:37.5rem) {
  .c31 {
    padding: 0 1rem;
  }
}

@media (min-width:80rem) {
  .c31 {
    width: 66.67%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c31 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }
}

<div
    class="c0"
  >
    <main
      class="c1 c2"
      dir="ltr"
      role="main"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <a
          data-e2e="cpsAssetDummyLink"
          href="/pidgin/23248703"
        >
          Test MAP to MAP inline link
        </a>
        <h1
          class="c4"
          id="content"
          tabindex="-1"
        >
          Nigerian man Emeka Nelson don produce generator wey dey use only water
        </h1>
        <div
          class="c5"
          dir="ltr"
        >
          <div
            class="c6"
            dir="ltr"
          >
            <figure
              class="c7"
            >
              <div
                class="c8"
              >
                <iframe
                  allow="autoplay; fullscreen"
                  allowfullscreen=""
                  class="c9"
                  src="https://www.test.bbc.co.uk/ws/av-embeds/cps/pidgin/tori-49450859/p07lg239/ig"
                  title="Media player"
                />
              </div>
            </figure>
          </div>
        </div>
        <div
          class="c10"
          dir="ltr"
        >
          <strong
            aria-hidden="true"
            class="c11"
          >
            Nigerian man Emeka Nelson don produce generator wey dey use only water
          </strong>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c13"
            dir="ltr"
          >
            <p
              class="c14"
            >
              <b>
                As Nigeria authorities still dey try to find solution to light mata, e be like say 26-year old Emeka Nelson don find di solution afta im produce generator wey go dey run on water
              </b>
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c13"
            dir="ltr"
          >
            <p
              class="c14"
            >
              Wetin ginger Emeka na im friend wey smoke from generator kill.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c13"
            dir="ltr"
          >
            <ul
              class="c15"
              dir="ltr"
              role="list"
            >
              <li
                role="listitem"
              >
                <div
                  class="c16"
                >
                  <div
                    class="c12 c2"
                    dir="ltr"
                  >
                    <div
                      class="c13"
                      dir="ltr"
                    >
                      <p
                        class="c14"
                      >
                        pidgin/tori-46975713
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                role="listitem"
              >
                <div
                  class="c16"
                >
                  <div
                    class="c12 c2"
                    dir="ltr"
                  >
                    <div
                      class="c13"
                      dir="ltr"
                    >
                      <p
                        class="c14"
                      >
                        pidgin/tori-42494678
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c13"
            dir="ltr"
          >
            <p
              class="c14"
            >
              BBC carri waka go Awka Anambra state inside South-east Nigeria go see di ogbonge invention wey Nelson produce.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c13"
            dir="ltr"
          >
            <p
              class="c14"
            >
              Nelson wey no be certified engineer struggle to read for elementary school, work as house help for di age of 5, and no get any university education.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c13"
            dir="ltr"
          >
            <p
              class="c14"
            >
              Wen we go im house, e dey full with Structural drawings and designs wey e pin for wall and na so e dey take im time dey study di drawing.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c13"
            dir="ltr"
          >
            <p
              class="c14"
            >
              For 16 years, e dey focus to make im dream turn to something real-dat na to make generator wey go run on water.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c13"
            dir="ltr"
          >
            <p
              class="c14"
            >
              Most of di material wey Nelson take arrange im generator na from  scrap.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c13"
            dir="ltr"
          >
            <p
              class="c14"
            >
              Di first generator wey im do explode wen e test am. Dis come make am dey doubt di project but afta plenti years of struggle e come get am right.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c13"
            dir="ltr"
          >
            <p
              class="c14"
            >
              Nelson says im generator get maximum output capacity of 1,000 watts and di voltage dey fluctuate between 220 and 240.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c13"
            dir="ltr"
          >
            <p
              class="c14"
            >
              E say one litre of clean water fit power di generator for 6 hours, and e no go bring out smoke like oda generators, e dey environment friendly.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c13"
            dir="ltr"
          >
            <p
              class="c14"
            >
              Dis ogbonge inventor add say im dream na for di generator to dey for millions of homes all ova di world.
            </p>
          </div>
        </div>
      </div>
      <div
        aria-labelledby="related-content-heading"
        class="c5 c17"
        dir="ltr"
      >
        <div
          class="c18"
        >
          <div
            class="c19"
          />
          <h2
            class="c20"
          >
            <div
              class="c21"
            >
              <span
                class="c22"
              >
                <span
                  class="c23"
                  dir="ltr"
                  id="related-content-heading"
                >
                  Ihe ndị ọzọ n'akụkọ a
                </span>
              </span>
            </div>
          </h2>
        </div>
        <ul
          class="c24"
          role="list"
        >
          <li
            class="c25"
            role="listitem"
          >
            <div
              class="c26"
            >
              <div
                class="c27"
              >
                <div
                  class="c28"
                >
                  <div
                    class="c29"
                  >
                    <div
                      class="lazyload-placeholder"
                    />
                  </div>
                  <div
                    class="c30"
                  />
                </div>
              </div>
              <div
                class="c31"
              >
                <h3
                  class="c32"
                >
                  <a
                    class="c33"
                    href="/pidgin/44508901?_x_candy_override=https%3A%2F%2Fapi.test.bbc.co.uk"
                  >
                    <span
                      role="text"
                    >
                      <span
                        class="c4"
                      >
                        , 
                      </span>
                      <span>
                        Meet boys who dey convert cassava to electricity
                      </span>
                    </span>
                  </a>
                </h3>
                <p
                  class="c34"
                >
                  James den Kwesi Ansah want convert most of Ghana's cassava waste into cheap electricity supply for schools, hospitals den villages.
                </p>
                <time
                  class="c35"
                  datetime="1970-01-18"
                >
                  18 Jenụwarị 1970
                </time>
              </div>
            </div>
          </li>
          <li
            class="c25"
            role="listitem"
          >
            <div
              class="c26"
            >
              <div
                class="c27"
              >
                <div
                  class="c28"
                >
                  <div
                    class="c29"
                  >
                    <div
                      class="lazyload-placeholder"
                    />
                  </div>
                  <div
                    class="c30"
                  />
                </div>
              </div>
              <div
                class="c31"
              >
                <h3
                  class="c32"
                >
                  <a
                    class="c33"
                    href="/pidgin/tori-46975713?_x_candy_override=https%3A%2F%2Fapi.test.bbc.co.uk"
                  >
                    How light companies dey use estimated billing show Nigerians pepper
                  </a>
                </h3>
                <p
                  class="c34"
                >
                  Lawmakers for Nigeria wan make am crime for light companies to use guesswork give customer estimated bill.
                </p>
                <time
                  class="c35"
                  datetime="1970-01-18"
                >
                  18 Jenụwarị 1970
                </time>
              </div>
            </div>
          </li>
          <li
            class="c25"
            role="listitem"
          >
            <div
              class="c26"
            >
              <div
                class="c27"
              >
                <div
                  class="c28"
                >
                  <div
                    class="c29"
                  >
                    <div
                      class="lazyload-placeholder"
                    />
                  </div>
                  <div
                    class="c30"
                  />
                </div>
              </div>
              <div
                class="c31"
              >
                <h3
                  class="c32"
                >
                  <a
                    class="c33"
                    href="/pidgin/tori-42494678?_x_candy_override=https%3A%2F%2Fapi.test.bbc.co.uk"
                  >
                    Nigeria: Wetin 5,222 megawatts electric fit do?
                  </a>
                </h3>
                <p
                  class="c34"
                >
                  Di Transmission Company of Nigeria and di vice-president office carry tori come outside say electric power wey di country produce don increase pass before as e reach 5,222 megawatts dis December.
                </p>
                <time
                  class="c35"
                  datetime="1970-01-18"
                >
                  18 Jenụwarị 1970
                </time>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`CpsAssetPageMain should render MAP with paragraph text 1`] = `
<DocumentFragment>
  <noscript />
  .c11 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

.c1 {
  position: relative;
}

.c12 {
  position: relative;
}

.c5 {
  position: relative;
}

.c6 {
  position: relative;
}

.c10 {
  position: relative;
}

.c14 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  padding-bottom: 0.25rem;
}

.c14:last-child {
  padding-bottom: 1rem;
}

.c37 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c16 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c17 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  list-style-type: none;
}

.c17 > li::before {
  content: ' ';
  display: inline-block;
  width: 2rem;
  background: url("data:image/svg+xml,%3Csvg height='10' width='10' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='5' cy='5' r='3'%3E%3C/circle%3E%3C/svg%3E") no-repeat center;
  margin-left: -2rem;
}

.c18 {
  display: inline-block;
}

.c7 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.c4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c31 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #ECEAE7;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

.c8 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c25 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #222222;
  background-color: #FFFFFF;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c21 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

.c20 {
  position: relative;
  margin-top: 2rem;
}

.c22 {
  margin: 0;
  padding: 0;
}

.c27 {
  border-bottom: 0.0625rem solid #F2F2F2;
  padding: 0.5rem 0 1rem;
}

.c27:first-child {
  padding-top: 0;
}

.c27:last-child {
  padding-bottom: 0;
  border: none;
}

.c26 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c28 {
  position: relative;
}

.c29 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

.c30 {
  position: relative;
}

.c34 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c36 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c33 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

.c35 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c35:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c35:hover,
.c35:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c35:visited {
  color: #6E6E73;
}

.c19 {
  z-index: 0;
}

.c9 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
  overflow: hidden;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c11 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c11 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c11 {
    padding: 2.5rem 0;
  }
}

@media (max-width:14.9375rem) {
  .c1 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c1 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c1 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c1 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 -0.5rem;
  }
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    margin: 0 0.5rem;
    width: calc(83.33333333333333% - 1rem);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    margin: 0 0.5rem;
    width: calc(62.5% - 1rem);
    margin-left: 12.5%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    margin: 0 0.5rem;
    width: calc(50% - 1rem);
    margin-left: 20%;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c12 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c12 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c12 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c12 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c12 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:80rem) {
  .c12 {
    margin: 0 -0.5rem;
  }
}

@supports (display:grid) {
  .c12 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c13 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c13 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c13 {
    margin: 0 0.25rem;
    width: calc(66.66666666666667% - 0.5rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c13 {
    margin: 0 0.5rem;
    width: calc(83.33333333333333% - 1rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c13 {
    margin: 0 0.5rem;
    width: calc(50% - 1rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c13 {
    margin: 0 0.5rem;
    width: calc(40% - 1rem);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c13 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c15 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c15 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c15 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem - 0%);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c15 {
    margin: 0 0.5rem;
    width: calc(83.33333333333333% - 1rem);
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c15 {
    margin: 0 0.5rem;
    width: calc(62.5% - 1rem);
    margin-left: 12.5%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c15 {
    margin: 0 0.5rem;
    width: calc(50% - 1rem);
    margin-left: 20%;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c15 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c5 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c5 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c5 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c5 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c5 {
    margin-left: 12.5%;
  }
}

@media (min-width:80rem) {
  .c5 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .c5 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c6 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c6 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c6 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c6 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c6 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .c6 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .c6 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c10 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c10 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c10 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c10 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c10 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .c10 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .c10 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@supports (display:grid) {
  .c0 {
    padding: 0;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c2 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c14 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c14 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c37 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c37 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c16 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c16 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c17 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c17 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c24 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c25 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c25 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c25 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .c25 {
    padding-right: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c21 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .c21 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c20 {
    margin-top: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c27 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width:63rem) {
  .c27 {
    padding: 1.5rem 0 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c27:first-child {
    padding-top: 1rem;
  }
}

@media (min-width:63rem) {
  .c27:first-child {
    padding-top: 1.5rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c28 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:80rem) {
  .c29 {
    width: 33.33%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c29 {
    display: block;
    width: initial;
    grid-column: 1 / span 2;
  }
}

@media (min-width:25rem) {
  .c32 {
    position: absolute;
    bottom: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c34 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c34 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c34 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c36 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c36 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .c36 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:37.5rem) {
  .c33 {
    padding: 0 1rem;
  }
}

@media (min-width:80rem) {
  .c33 {
    width: 66.67%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c33 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }
}

<div
    class="c0"
  >
    <main
      class="c1 c2"
      dir="ltr"
      role="main"
    >
      <div
        class="c3"
        dir="ltr"
      >
        <a
          data-e2e="cpsAssetDummyLink"
          href="/pidgin/23248703"
        >
          Test MAP to MAP inline link
        </a>
        <h1
          class="c4"
          id="content"
          tabindex="-1"
        >
          Nigerian man Emeka Nelson don produce generator wey dey use only water
        </h1>
        <div
          class="c5"
          dir="ltr"
        >
          <div
            class="c6"
            dir="ltr"
          >
            <figure
              class="c7"
            >
              <div
                class="c8"
              >
                <iframe
                  allow="autoplay; fullscreen"
                  allowfullscreen=""
                  class="c9"
                  src="https://www.test.bbc.co.uk/ws/av-embeds/cps/pidgin/tori-49450859/p07lg239/ig"
                  title="Media player"
                />
              </div>
            </figure>
          </div>
        </div>
        <div
          class="c10"
          dir="ltr"
        >
          <strong
            aria-hidden="true"
            class="c11"
          >
            Nigerian man Emeka Nelson don produce generator wey dey use only water
          </strong>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c13"
            dir="ltr"
          >
            <time
              class="c14"
              datetime="2019-08-23"
            >
              23 Ọgọọst 2019
            </time>
            <time
              class="c14"
              datetime="2019-08-23"
            >
              Mgbe ikpeazụ e tinyere ya ozi ọhụrụ 23 Ọgọọst 2019
            </time>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              <b>
                As Nigeria authorities still dey try to find solution to light mata, e be like say 26-year old Emeka Nelson don find di solution afta im produce generator wey go dey run on water
              </b>
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              Wetin ginger Emeka na im friend wey smoke from generator kill.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <ul
              class="c17"
              dir="ltr"
              role="list"
            >
              <li
                role="listitem"
              >
                <div
                  class="c18"
                >
                  <div
                    class="c12 c2"
                    dir="ltr"
                  >
                    <div
                      class="c15"
                      dir="ltr"
                    >
                      <p
                        class="c16"
                      >
                        pidgin/tori-46975713
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                role="listitem"
              >
                <div
                  class="c18"
                >
                  <div
                    class="c12 c2"
                    dir="ltr"
                  >
                    <div
                      class="c15"
                      dir="ltr"
                    >
                      <p
                        class="c16"
                      >
                        pidgin/tori-42494678
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              BBC carri waka go Awka Anambra state inside South-east Nigeria go see di ogbonge invention wey Nelson produce.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              Nelson wey no be certified engineer struggle to read for elementary school, work as house help for di age of 5, and no get any university education.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              Wen we go im house, e dey full with Structural drawings and designs wey e pin for wall and na so e dey take im time dey study di drawing.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              For 16 years, e dey focus to make im dream turn to something real-dat na to make generator wey go run on water.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              Most of di material wey Nelson take arrange im generator na from  scrap.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              Di first generator wey im do explode wen e test am. Dis come make am dey doubt di project but afta plenti years of struggle e come get am right.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              Nelson says im generator get maximum output capacity of 1,000 watts and di voltage dey fluctuate between 220 and 240.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              E say one litre of clean water fit power di generator for 6 hours, and e no go bring out smoke like oda generators, e dey environment friendly.
            </p>
          </div>
        </div>
        <div
          class="c12 c2"
          dir="ltr"
        >
          <div
            class="c15"
            dir="ltr"
          >
            <p
              class="c16"
            >
              Dis ogbonge inventor add say im dream na for di generator to dey for millions of homes all ova di world.
            </p>
          </div>
        </div>
      </div>
      <div
        aria-labelledby="related-content-heading"
        class="c5 c19"
        dir="ltr"
      >
        <div
          class="c20"
        >
          <div
            class="c21"
          />
          <h2
            class="c22"
          >
            <div
              class="c23"
            >
              <span
                class="c24"
              >
                <span
                  class="c25"
                  dir="ltr"
                  id="related-content-heading"
                >
                  Ihe ndị ọzọ n'akụkọ a
                </span>
              </span>
            </div>
          </h2>
        </div>
        <ul
          class="c26"
          role="list"
        >
          <li
            class="c27"
            role="listitem"
          >
            <div
              class="c28"
            >
              <div
                class="c29"
              >
                <div
                  class="c30"
                >
                  <div
                    class="c31"
                  >
                    <div
                      class="lazyload-placeholder"
                    />
                  </div>
                  <div
                    class="c32"
                  />
                </div>
              </div>
              <div
                class="c33"
              >
                <h3
                  class="c34"
                >
                  <a
                    class="c35"
                    href="/pidgin/44508901?_x_candy_override=https%3A%2F%2Fapi.test.bbc.co.uk"
                  >
                    <span
                      role="text"
                    >
                      <span
                        class="c4"
                      >
                        , 
                      </span>
                      <span>
                        Meet boys who dey convert cassava to electricity
                      </span>
                    </span>
                  </a>
                </h3>
                <p
                  class="c36"
                >
                  James den Kwesi Ansah want convert most of Ghana's cassava waste into cheap electricity supply for schools, hospitals den villages.
                </p>
                <time
                  class="c37"
                  datetime="1970-01-18"
                >
                  18 Jenụwarị 1970
                </time>
              </div>
            </div>
          </li>
          <li
            class="c27"
            role="listitem"
          >
            <div
              class="c28"
            >
              <div
                class="c29"
              >
                <div
                  class="c30"
                >
                  <div
                    class="c31"
                  >
                    <div
                      class="lazyload-placeholder"
                    />
                  </div>
                  <div
                    class="c32"
                  />
                </div>
              </div>
              <div
                class="c33"
              >
                <h3
                  class="c34"
                >
                  <a
                    class="c35"
                    href="/pidgin/tori-46975713?_x_candy_override=https%3A%2F%2Fapi.test.bbc.co.uk"
                  >
                    How light companies dey use estimated billing show Nigerians pepper
                  </a>
                </h3>
                <p
                  class="c36"
                >
                  Lawmakers for Nigeria wan make am crime for light companies to use guesswork give customer estimated bill.
                </p>
                <time
                  class="c37"
                  datetime="1970-01-18"
                >
                  18 Jenụwarị 1970
                </time>
              </div>
            </div>
          </li>
          <li
            class="c27"
            role="listitem"
          >
            <div
              class="c28"
            >
              <div
                class="c29"
              >
                <div
                  class="c30"
                >
                  <div
                    class="c31"
                  >
                    <div
                      class="lazyload-placeholder"
                    />
                  </div>
                  <div
                    class="c32"
                  />
                </div>
              </div>
              <div
                class="c33"
              >
                <h3
                  class="c34"
                >
                  <a
                    class="c35"
                    href="/pidgin/tori-42494678?_x_candy_override=https%3A%2F%2Fapi.test.bbc.co.uk"
                  >
                    Nigeria: Wetin 5,222 megawatts electric fit do?
                  </a>
                </h3>
                <p
                  class="c36"
                >
                  Di Transmission Company of Nigeria and di vice-president office carry tori come outside say electric power wey di country produce don increase pass before as e reach 5,222 megawatts dis December.
                </p>
                <time
                  class="c37"
                  datetime="1970-01-18"
                >
                  18 Jenụwarị 1970
                </time>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </main>
  </div>
</DocumentFragment>
`;
